--- a/angular.json
+++ b/angular.json
@@ -33,13 +33,22 @@
             "assets": [
               {
                 "glob": "**/*",
-                "input": "public"
+                "input": "src/assets",
+                "output": "/assets"
               }
+            
             ],
             "styles": [
-              "src/styles.css"
+              "src/styles.css",
+              "./node_modules/bootstrap/dist/css/bootstrap.min.css"
+
             ],
-            "scripts": [],
+            "scripts": [
+            "./node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"
+            
+
+
+    ],
             "server": "src/main.server.ts",
             "outputMode": "server",
             "ssr": {
@@ -107,5 +116,8 @@
         }
       }
     }
+  },
+  "cli": {
+    "analytics": "ff12078d-c47c-4759-9088-91aed5626769"
   }
 }
