--- a/package.json
+++ b/package.json
@@ -21,8 +21,14 @@
     "@angular/platform-server": "^19.0.0",
     "@angular/router": "^19.0.0",
     "@angular/ssr": "^19.0.6",
+    "angular-font-awesome": "^3.1.2",
+    "bootstrap": "^5.3.3",
     "express": "^4.18.2",
+    "jquery": "^3.7.1",
+    "ngx-bootstrap": "^19.0.1",
+    "ngx-slick-carousel": "^19.0.0",
     "rxjs": "~7.8.0",
+    "slick-carousel": "^1.8.1",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
   },
